--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -176,19 +176,39 @@
                 </tr>
                 {{#each data}}
                     <tr>
-                        <td>{{category}}</td>
-                        <td>{{vendorname}}</td>
+                        
+                        <td>
+                        <img src="/src/{{category}}Icon.png" id="{{category}}img" style="width:50px;height:50px;border:0;" onerror="this.src='/src/testingIcon.jpg';">
+                        </td>
+                       
+                        
+                        <td>{{name}}</td>
+                        <td>{{vendorname}}
+                            {{category}}
+                        </td>
                         <td>{{start_date}}</td>
                         <td>
                             {{description}}
                             <div>
                                <form action="/savewishlist/delete" method="post">
                                    <input class='invis' name='eventid' type='text' value={{event_id}}>
-                                   <button type='submit' class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?');">
-                                       Delete From Wishlist
-                                       </button> 
+                                   <button type='submit' class=" invis btn btn-danger" id="submitbutton"></button> 
                                </form>
-                              
+                            <button class="btn btn-danger" onclick="
+                            Swal.fire({
+                                        title: 'Are you sure?',
+                                        text: 'You will not be able to revert this!',
+                                        icon: 'warning',
+                                        showCancelButton: true,
+                                        confirmButtonColor: '#3085d6',
+                                        cancelButtonColor: '#d33',
+                                        confirmButtonText: 'Yes, delete it!'
+                                        }).then((result) => {
+                                        if (result.value) {
+                                            document.getElementById('submitbutton').click();
+                                        }
+                                        })
+                            ">Delete from wishlist</button>
                             </div>
                         </td>
                         
