--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -61,19 +61,35 @@
                 <div class="container col-md-6">
                     <div class="box">
                         <div class="inline-block">
-
-                            
-                            <!--                       <div class="btn-group-vertical" role="group" aria-label="..."></div>-->
                         </div>
 
                         <div class="card">
                             <img src="/src/img.jpg" alt="John" style="width:100%">
-                            <h1>Jimmy</h1>
-                            <p class="title">Age: 7</p>
+                            <div id="jimmy" class="inv" style="font-size: 30px;">Jimmy
+                                <p class="title">Age: 7</p>
                             <p>Hobbies: Swimming, Dance</p>
-                            <p><button>Change Profile</button></p>
-
-                        
+                            </div>
+                            <div id="billy" class="inv" style="font-size: 30px;">Billy
+                                <p class="title">Age: 9</p>
+                            <p>Hobbies: Basketball, Volleyball</p>
+                            </div>
+                            <div id="johnny" class="inv" style="font-size: 30px;">Johnny
+                                <p class="title">Age: 7</p>
+                            <p>Hobbies: Volleyball, Church</p>
+                            </div>
+                            
+                            
+                            {{!-- <div class="dropdown"> --}}
+                            {{!-- <p><button class="dropbtn">Change Profile</button> --}}
+                            {{!-- <div class="dropdown-content"> --}}
+                                <select id="target" style="font-size:24px;">
+                                <option value="jimmy">Jimmy</option>
+                                <option value="billy">Billy</option>
+                                <option value="johnny">Johnny</option>
+                                </select>
+                               {{!-- </div> --}}
+                            {{!-- </div> --}}
+                            {{!-- </p> --}}
                         </div>
 
                         <div class="container">
@@ -90,83 +106,13 @@
                                     </li>
                                 </ul>
                             </div>
-
-                        {{!-- <form class="form-horizontal pf">
-                                <img class="profile-pic" src="sample.jpg" alt="pic"
-                                    style="max-width: 300px; max-height: 300px">
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">Name</label>
-                                    <div class="col-sm-10">
-                                        <p class="form-control-static">Jay</p>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">Age</label>
-                                    <div class="col-sm-10">
-                                        <p class="form-control-static">7</p>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">Hobbies</label>
-                                    <div class="col-sm-10">
-                                        <p class="form-control-static">Soccer, Drawing</p>
-                                    </div>
-                                </div>
-                            </form> --}}
                     </div>
                 </div>
             </div>
         </div>
-
-        {{!-- <div class="col-md-6">
-                <div class="container" style="width: 100%; background-color: lightgray" ;>
-                    <h2>Favorites</h2>
-                </div>
-                <div class="list-group">
-                    <a href="#" class="list-group-item">
-                        <button type="button" class="btn btn-default btn-sm" style="position:absolute; right: 5px;">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </button>
-                        <h4>Children's Art Contest</h4>
-                        <p>Join us at the Central Art Gallery</p>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <button type="button" class="btn btn-default btn-sm remove-event">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </button>
-                        <h4>Summer Soccer camp</h4>
-                        <p>sponsored by the Victoria Soccer Community</p>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <button type="button" class="btn btn-default btn-sm remove-event">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </button>
-                        <h4>Event 3</h4>
-                        <p>info 3</p>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <button type="button" class="btn btn-default btn-sm remove-event">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </button>
-                        <h4>Event 4</h4>
-                        <p>info 4</p>
-                    </a>
-                    <a href="#" class="list-group-item">
-                        <button type="button" class="btn btn-default btn-sm remove-event">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </button>
-                        <h5>Event 5</h5>
-                        <p>info 5</p>
-                    </a>
-                </div>
-
-
-            </div> --}}
-
+        <div class="container col-md-6">
         <div class="table-events">
-            {{!-- <div class="header">Events</div> --}}
-
-            <table cellspacing="0">
+            <table cellspacing="0" rules=rows>
                 <tr>
                     <th>Category</th>
                     <th>Event Name</th>
@@ -216,6 +162,7 @@
 
 
             </table>
+            </div>
         </div>
     </div>
 
@@ -223,3 +170,19 @@
 </body>
 
 </html>
+
+<script>
+document
+    .getElementById('target')
+    .addEventListener('change', function() {
+        'use strict';
+        var vis = document.querySelector('.vis'),
+            target = document.getElementById(this.value);
+        if (vis !== null) {
+            vis.className = 'invis';
+        }
+        if (target !== null) {
+            target.className = 'vis';
+        }
+    });
+</script>
