--- a/style/home.css
+++ b/style/home.css
@@ -47,6 +47,7 @@
     padding-top: 2%;
     ;
     z-index: 1;
+    top: 20%;
 }
 
 .search {
@@ -105,7 +106,7 @@ body {
 }
 
 .container {
-    padding-top: 10%;
+    padding-top: 6%;
 }
 
 
@@ -114,4 +115,17 @@ body {
     vertical-align: bottom;
     position: relative;
     right: 30px;
-} *
+} */
+
+#permission-btn {
+    position: relative;
+    width: 220px;
+    left: 35%;
+    text-align: center;
+    background-color: #FFE4C4;
+    text-decoration: none;
+    line-height: 27px;
+    font-family: 'Oswald', Helvetica;
+    display: block;
+    margin: 10px;
+}
