--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,6 +15,7 @@
     <div class="container">
         <div class="homeContainer">
             <div class="playText"> <b>Let's Play! </div>
+            <button id="permission-btn" onclick="main()">Turn on Notifications!</button>
             <div class="play">
                 <a href="/event">
                     <div class="search">Events</div>
@@ -54,3 +55,5 @@
 </body>
 
 </html>
+
+<script src="/scripts/notifications.js"></script>
