--- a/views/admin_home.hbs
+++ b/views/admin_home.hbs
@@ -16,9 +16,9 @@
         <div class="col-md-12">
             <p class="form_text">Welcome Admin! </p>
             <div class = "btn_container btns">
-                <a href="#" class="btn btn-info btn-lg add_btn">Users</a>
                 <a href="/admin/event" class="btn btn-info btn-lg add_btn">Events</a>
-                <a href="#" class="btn btn-info btn-lg add_btn">Notification</a>
+                <a href="#" class="btn btn-info btn-lg add_btn">Users</a>
+                <!--<a href="#" class="btn btn-info btn-lg add_btn">Notification</a>-->
             </div>
 
         </div>
