--- a/views/login.hbs
+++ b/views/login.hbs
@@ -122,10 +122,10 @@
                                   <div class="modal-body container">
                                       <div class="tab" #id="more_children">
                                           {{!-- {{>KidRegister}} --}}
-                                          <p>Mykid1<input class="register-kid" placeholder="Nickname" id="nickname1">is a <span>{{>gender}}</span> who is interested in <input type="text" name='interests' id='interest'></p><span><button type="button" id="delete" name="delete">delete</button></span> 
+                                          <p>Mykid1<input class="register-kid" placeholder="Nickname" id="nickname1">is a <span>{{>gender}}</span> who is interested in <input type="text" name='interests' id='interest'></p> 
                                             {{!--<span name='interests' id='interest'>{{<interests}}</span>.--}} 
-                                          {{!-- <p>Mykid2<input class="register-kid" placeholder="Nickname" name="nickname" id="nickname2">is a <span>{{>gender}}</span> who is interested in {{>interests}}</p>
-                                          <p>Mykid3<input class="register-kid" placeholder="Nickname" name="nickname" id="nickname3">is a <span>{{>gender}}</span> who is interested in<input class="register-kid" placeholder="Interest" name="interest"></p> --}}
+                                          {{!-- <p>Mykid2<input class="register-kid" placeholder="Nickname" name="nickname" id="nickname2">is a <span>{{>gender}}</span> who is interested in {{>interests}}</p> --}}
+                                          <p>Mykid3<input class="register-kid" placeholder="Nickname" name="nickname3" id="nickname3">is a <span>{{>gender}}</span> who is interested in<input class="register-kid" placeholder="Interest" name="interest"></p> 
                                           <div class="new_kid"></div>
                                           <button type="button" id="add_more" name="addmore">Add More</button>
                                       </div>
