--- a/views/login.hbs
+++ b/views/login.hbs
@@ -184,7 +184,7 @@
                   </div>
 
               <!-- Business Modal: Method #2 -->
-                <form action="/register" method="POST" >
+                <form id="B-Register" action="/register" method="POST" >
                   <div class="modal fade" id="Business1" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                           <div class="modal-dialog" style="overflow-y: initial !important">
                               <div class="modal-content">
@@ -296,7 +296,7 @@
                                       <p>please log in to your account.</p>
                                   </div>
                                   <div class="modal-footer">
-                                      <button type="button" class="submit1" data-dismiss="modal">Close</button>
+                                      <button type="button" class="submit1" id="B-Register-complete" data-dismiss="modal">Close</button>
                                   </div>
                               </div>
                           </div>
