--- a/views/admin_home.hbs
+++ b/views/admin_home.hbs
@@ -12,8 +12,8 @@
     <body>
 
         {{> menu}}
-
-        <div class="col-md-12">
+        <div class="pic_container">
+        <div class="bg col-md-12">
             <p class="form_text">Welcome Admin! </p>
             <div class = "btn_container btns">
                 <a href="/admin/event" class="btn btn-info btn-lg add_btn">Events</a>
@@ -21,6 +21,7 @@
                 <!--<a href="#" class="btn btn-info btn-lg add_btn">Notification</a>-->
             </div>
 
+        </div>
         </div>
 
     </body>
