Updated register.js & login.hbs
-create some parent alerts and validations

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -92,11 +92,11 @@
                                               <span>
                                                     <form>
                                                         <select class="guardian" id="Guardian">
-                                                            <option> </option>
-                                                            <option>Mom</option>
-                                                            <option>Dad</option>
-                                                            <option>Relative</option>
-                                                            <option>Caretaker</option>        
+                                                            <option value=""> </option>
+                                                            <option value="Mom">Mom</option>
+                                                            <option value="Dad">Dad</option>
+                                                            <option value="Relative">Relative</option>
+                                                            <option value="Caretaker">Caretaker</option>        
                                                         </select>
                                                     </form>
                                                 </span>."
@@ -208,8 +208,8 @@
                                       </div>
                                       <hr class="my-2">
                                       <div class="custom-control custom-checkbox">
-                                          <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                          <label class="custom-control-label" for="customCheck1">I have read and agreed to the Terms & conditions.</label>
+                                          <input type="checkbox" class="custom-control-input" id="Parent_TermCheck">
+                                          <label class="custom-control-label" for="Parent_TermCheck">I have read and agreed to the Terms & conditions.</label>
                                       </div>
                                   </div>
                                   <div class="modal-footer">
