Updated register.js & login.hbs
- "Home Page link" (end of Parent Registration) now clears input fields on click.

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -233,7 +233,7 @@
                                       <p>Click the button below to go to Home page</p>
                                   </div>
                                   <div class="modal-footer">
-                                      <button type="button" class="submit1"><a href="/home" style="color: antiquewhite;">Home Page</a></button>
+                                      <button type="button" class="submit1" id="P-Register-complete"><a href="/home" id="toHome" style="color: antiquewhite;">Home Page</a></button>
                                   </div>
                               </div>
                           </div>
