--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,12 +7,6 @@
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/login.css" type="text/css" rel="stylesheet" />
         <link href="/css/register.css" type="text/css" rel="stylesheet" />
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/formvalidation/0.6.1/js/formValidation.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/formvalidation/0.6.1/js/framework/bootstrap.min.js"></script>
-
 
     </head>
 
@@ -70,9 +64,8 @@
                                       <h4 class="modal-title">Create Account</h4>
                                   </div>
                                   <div class="modal-body">
-                                      <form action="" id="parentloginform">
                                       <div class="tab">
-                                          <p><input type="email" class="register" placeholder="Username/Email address" name="email" id='p_email'></p>
+                                          <p><input class="register" placeholder="Email address" name="email" id='p_email'></p>
                                           <p><input class="register" placeholder="Phone number"  name="phone" id='p_phone'></p>
                                           <p><input class="register" placeholder="Password"  name="pw" id='p_password'></p>
                                           <p><input class="register" placeholder="Comfirm Password"  name="confirm_pw" id='p_confirm_pw'></p>
@@ -81,7 +74,6 @@
                                   <div class="modal-footer">
                                       <button type="button" class="submit1" id="P-Account">Continue</button>
                                   </div>
-                                </form>
                               </div>
                           </div>
                   </div>
@@ -98,14 +90,16 @@
                                           <p>Hi, Tell us about you so we can keep you on the know about children's activities in your area.</p>
                                           <p>"I'm an awesome 
                                               <span>
-                                                        <select id="Guardian" class="guardian">
-                                                            <option>Mom</option>
-                                                            <option>Dad</option>
-                                                            <option>Relative</option>
-                                                            <option>Caretaker</option>        
+                                                    <form>
+                                                        <select class="guardian" id="Guardian">
+                                                            <option value=""> </option>
+                                                            <option value="Mom">Mom</option>
+                                                            <option value="Dad">Dad</option>
+                                                            <option value="Relative">Relative</option>
+                                                            <option value="Caretaker">Caretaker</option>        
                                                         </select>
-
-                                                </span>
+                                                    </form>
+                                                </span>."
                                            </p>
                                       </div>
                                   </div>
@@ -127,11 +121,11 @@
                                       <button type="button" class="submit1" id="P-Skip">Skip</button>
                                   </div>
                                   <div class="modal-body container">
-                                      <div class="tab" id="morekids">
+                                      <div class="tab" #id="more_children">
                                           {{!-- {{>KidRegister}} --}}
-                                         <div class="allInputs1">
-                                            <p>Mykid1
-                                              <input class="register-kid1" placeholder="Nickname1" id="kidname1" name="nickname1">
+                                         
+                                          <p>Mykid1
+                                              <input class="register-kid" placeholder="Nickname1" id="nickname1">
                                               is a 
                                             <span class="form-group">
                                                 <select id="gender1" class="register-Gender">
@@ -140,15 +134,11 @@
                                                 </select>
                                             </span>
                                               who is interested in 
-                                              <input class="register-kid1" type="text" name='interest1' id='interest1'>
+                                              <input class="register-kid" type="text" name='interest1' id='interest1'>
                                             </p>
-                                        {{!-- <input type="button" value="Add a field" class="add" id="add" /> --}}
-                                        <button type="button" class="submit1" id="add">Add more Fields</button>                    
-                                        <button type="button" class="submit1" id="more1">Add more Kids</button>                    
+                                            <span style=""><button type="button" class="glyphicon glyphicon-remove" id="delete" name="delete" onclick="DeleteRow()"></button></span>
 
-                                         </div>
-                                          
-                                          {{!-- <p>
+                                          <p>
                                               Mykid2
                                               <input class="register-kid" placeholder="Nickname2" name="nickname2" id="nickname2">
                                               is a
@@ -173,12 +163,9 @@
                                             </span>
                                               who is interested in
                                               <input class="register-kid" placeholder="Interest" name="interest3" id="interest3">
-                                            </p>  --}}
-
+                                            </p> 
                                       </div>
-
                                   </div>
-
                                   <div class="modal-footer">
                                       <button type="button" class="submit1" id="P-Redo-User">Back</button>                    
                                       <button type="button" class="submit1" id="P-Kids">Continue</button>
@@ -253,46 +240,30 @@
                   </div>
 
               <!-- Business Modal: Method #2 -->
-               
-                {{!-- <form action="/register" method="POST" name="vendor-form" onsubmit='return checkLoginForm(this);'> --}}
-                {{!-- {{#each errors }} --}}
-                {{!-- <input class="invsdf" value="{{text}}" id="errorstatus">{{text}}    --}}
-                {{!-- <div id="error">{{text}}</div> --}}
-                {{!-- {{/each}} --}}
-
+                <form id="B-Register" action="/register" method="POST" >
                   <div class="modal fade" id="Business1" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                   
                           <div class="modal-dialog" style="overflow-y: initial !important">
                               <div class="modal-content">
                                   <div class="modal-header">
                                       <button type="button" class="close B-clear" data-dismiss="modal">&times;</button>
                                       <h4 class="modal-title">Create Account</h4>
                                   </div>
-                                  
                                   <div class="modal-body" id="B-1" style="max-height: calc(100vh - 200px); overflow-y: auto;">
                                       <div class="tab">
-
-                                          {{> errors}}
-                                          <form action="/registerVendor" method='POST' name="vendor-form" id="newModalForm">
-                                            
-                                        <p><input class="register" id="bus_Fname" placeholder="First Name" required name="fname" value={{fname}}></p>
-                                        <p><input class="register" id="bus_Lname" placeholder="Last name" required name="lname" value={{lname}}></p>
-                                        <p><input class="register" id="bus_Orgname" placeholder="Organization name" name="org_name" value={{org}}></p>
-                                        <p><input class="register" id="bus_Address" placeholder="Address" name="address"></p>
-                                        <p><input class="register" id="bus_Phone" placeholder="Phone number" name="phone"></p>
-                                        <p><input class="register" id="bus_Email" placeholder="Email address" name="email"></p>
-                                        <p><input class="register" id="bus_Website" placeholder="Organization website" name="website"></p>
-                                        <p><input class="register" id="bus_PW" placeholder="Password" name="pw"></p>
-                                        <p><input class="register" id="bus_PWconfirm" placeholder="Comfirm Password" name="confirm_pw"></p>
-                                            <div class="modal-footer">
-                                               <button type="button" class="submit1" id="B-Register-info">Continue</button>
-                                            </div>
-                                        </form>
+                                          <p><input class="register" id="bus_Fname" placeholder="First Name" name="fname"></p>
+                                          <p><input class="register" id="bus_Lname" placeholder="Last name" name="lname"></p>
+                                          <p><input class="register" id="bus_Orgname" placeholder="Organization name" name="org_name"></p>
+                                          <p><input class="register" id="bus_Address" placeholder="Address" name="address"></p>
+                                          <p><input class="register" id="bus_Phone" placeholder="Phone number" name="phone"></p>
+                                          <p><input class="register" id="bus_Email" placeholder="Email address" name="email"></p>
+                                          <p><input class="register" id="bus_Website" placeholder="Organization website" name="website"></p>
+                                          <p><input class="register" id="bus_PW" placeholder="Password" name="pw"></p>
+                                          <p><input class="register" id="bus_PWconfirm" placeholder="Confirm Password" name="confirm_pw"></p>
                                       </div>
                                   </div>
-                                  {{!-- <div class="modal-footer">
-                                      {{!-- <button type="button" class="submit1" id="B-Register-info">Continue</button> --}}
-                                  </div> --}}
+                                  <div class="modal-footer">
+                                      <button type="button" class="submit1" id="B-Register-info">Continue</button>
+                                  </div>
                               </div>
                           </div>
                   </div>
@@ -379,7 +350,6 @@
                                       <h1>All done!!!</h1>
                                       <p></p>
                                       <p>please log in to your account.</p>
-
                                   </div>
                                   <div class="modal-footer">
                                       <button type="button" class="submit1" id="B-Register-complete" data-dismiss="modal">Close</button>
@@ -390,16 +360,10 @@
               </form>
             </div>  
 
-        <script src="/scripts/register.js">
-            
-        </script>
-        <script>
-            
-
-        </script>    
+        <script src="/scripts/register.js"></script>    
 
        
-       
+        
         
         
     </body>
